<resources>
    <string name="app_name">MusicPlayerMobileApplication</string>
    <string name="select_gender">Select Gender</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="image">Image</string>
    <string name="nothing_to_show">Nothing To Show…</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="bio">Biography</string>
    <string name="bio_placeholder">Hello! I\'m new!</string>
    <string name="age">Age: %d</string>
    <string name="gender">Gender: %s</string>
    <string name="joined_at">Joined At: %s</string>
    <string name="log_out">Log Out</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="your_library">Your Library</string>
    <string name="playlists">Playlists</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="favourites">Favourites</string>
    <string-array name="genders">
        <item>Prefer Not To Say</item>
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>
    <string name="add_edit_playlist">%s Playlist</string>
    <string name="add">Add</string>
    <string name="songs">Songs</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="header">Header</string>
    <string name="body">Body</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="music_player">Music Player</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="log_in">Log In</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="duration_start">00:00</string>
    <string name="duration_end">03:00</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="all">All</string>
    <string name="select_image">Select Image</string>
</resources>