<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.musicplayermobileapplication.ui.viewmodels.LoginSignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/blue_gradient_bg1"
        tools:context=".ui.fragments.LoginSignUpFragment">

        <TextView
            android:id="@+id/tvMusicPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/extrabold_poppins"
            android:text="@string/music_player"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="65sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/green"
            android:elevation="4dp"
            android:fontFamily="@font/bold_chakrapetch"
            android:text="@string/sign_up_for_free"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:translationZ="6dp"
            app:cornerRadius="20dp"/>

        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold_chakrapetch"
            android:shadowColor="@color/white"
            android:shadowDx="6"
            android:shadowDy="6"
            android:shadowRadius="10"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:background="@drawable/input_box"
                android:hint="@string/username"
                android:autofillHints="username"
                android:inputType="text"
                android:text="@={viewModel.username}"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/input_box"
                android:hint="@string/password"
                android:autofillHints="username"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:prompt="@string/select_gender"
                    android:entries="@array/genders"
                    android:background="@color/white" />

                <NumberPicker
                    android:id="@+id/npAge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@color/white"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:fontFamily="@font/semibold_poppins"
                android:text="@string/select_image"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/green"
                android:elevation="4dp"
                android:fontFamily="@font/bold_chakrapetch"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:translationZ="6dp"
                app:cornerRadius="20dp"/>

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bold_chakrapetch"
                android:shadowColor="@color/white"
                android:shadowDx="6"
                android:shadowDy="6"
                android:shadowRadius="10"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</layout>