<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/llPlaylist"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" >

        <ImageView
            android:id="@+id/ivPlaylistPic"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="6dp"
            android:src="@drawable/yoasobi"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/ten_dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPlaylistTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold_poppins"
                android:text="@string/title"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPlaylistDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/light_poppins"
                android:text="@string/description"
                android:textColor="@color/dark_grey"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</layout>