<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/peach_gradient_bg1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@drawable/favourites_bg">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerCrop"
                android:src="@drawable/yoasobi"
                android:layout_gravity="center"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/extrabold_poppins"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/thirty_sp" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold_poppins"
                    android:text="@string/title"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/sixteen_sp" />

                <TextView
                    android:id="@+id/tvNoOfSongs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/light_poppins"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:textSize="@dimen/fourteen_sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/settings" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:fontFamily="@font/semibold_poppins"
            android:text="@string/songs"
            android:textColor="@color/dark_red"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavourites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="20dp" />

    </LinearLayout>

</layout>



